--- a/index.html
+++ b/index.html
@@ -48,6 +48,19 @@
             <div class="list-item__content column--1-1">
               <div class="image__container">
                 <img src="./assets/inside.png" alt="" />
+
+                <input type="checkbox" style="top: 15%; left: 48%"/>
+                <input type="checkbox" style="top: 39%; left: 48%"/>
+                <input type="checkbox" style="top: 56%; left: 18%"/>
+                <input type="checkbox" style="top: 56%; left: 77%"/>
+                <input type="checkbox" style="top: 57%; left: 48%"/>
+                <input type="checkbox" style="top: 70%; left: 48%"/>
+                <input type="checkbox" style="top: 75%; left: 60%"/>
+                <input type="checkbox" style="top: 75%; left: 37%"/>
+                <input type="checkbox" style="top: 71%; left: 18%"/>
+                <input type="checkbox" style="top: 71%; left: 77%"/>
+                <input type="checkbox" style="top: 87%; left: 37%"/>
+                <input type="checkbox" style="top: 85%; left: 66%"/>
               </div>
 
               <div class="options-section">
@@ -181,7 +194,21 @@
 
             <div class="list-item__content column--1-1">
               <div class="image__container">
-                <img src="./assets/inside.png" alt="" />
+                <img src="./assets/outside.png" alt="" />
+
+                <input type="checkbox" style="top: 6%; left: 48%"/>
+                <input type="checkbox" style="top: 21%; left: 48%"/>
+                <input type="checkbox" style="top: 53%; left: 48%"/>
+                <input type="checkbox" style="top: 79%; left: 48%"/>
+                <input type="checkbox" style="top: 87%; left: 48%"/>
+                <input type="checkbox" style="top: 25%; left: 20%"/>
+                <input type="checkbox" style="top: 25%; left: 76%"/>
+                <input type="checkbox" style="top: 75%; left: 20%"/>
+                <input type="checkbox" style="top: 75%; left: 77%"/>
+                <input type="checkbox" style="top: 57%; left: 77%"/>
+                <input type="checkbox" style="top: 43%; left: 77%"/>
+                <input type="checkbox" style="top: 43%; left: 20%"/>
+                <input type="checkbox" style="top: 57%; left: 20%"/>
               </div>
 
               <div class="options-section">
